--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,20 +1,11 @@
 <ul>
   <li>
-    <a href="{{ site.url }}{{site.baseurl}}/">Home</a>
+    <a href="{{ site.url }}{{site.baseurl}}/">home</a>
   </li>
   {% for page in site.pages %}
     {% if page.menu %}
-      <li>
-        <a href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
-      </li>
-    {% endif %}
-  {% endfor %}
-  {% if site.email %}
     <li>
-      <a href="{{ site.url }}{{site.baseurl}}/contact/">Contact</a>
+      <a href="{{ site.url }}{{site.baseurl}}/about/">about</a>
     </li>
   {% endif %}
   <li>
-    <a class="feed" href="{{ site.url }}{{site.baseurl}}/feed.xml" title="Atom/RSS feed">Feed</a>
-  </li>
-</ul>
